# check

./: meson.build
lib/: meson.build
src/: meson.build
